backlinking to blog

--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,6 @@
             <!-- NAME & STATUS -->
             <div class="text-holder text-center">
                 <h2>Zubair Ahmed</h2>
-                <h6>Software Engineer</h6>
             </div>
         </div>
     </div>
@@ -89,6 +88,7 @@
             <!--<a href="#pricing-table"><i class="title-icon fa fa-money"></i>Pricing</a>-->
             <!--<a href="#blog"><i class="title-icon fa fa-pencil-square"></i>Blog</a>-->
             <a href="#contact"><i class="title-icon fa fa-envelope"></i>Contact</a>
+            <a href="http://grizzlybit.info/"><i class="title-icon fa fa-envelope"></i>Grizzlybit</a>
         </div>
 
         <!-- MENU BUTTON -->
