--- a/about/index.html
+++ b/about/index.html
@@ -748,6 +748,75 @@
                     </div>
                 </div>
             </div>
+            <!-- SIXTH TIMELINE -->
+            <div class="timeline-block">
+                <!-- DOT -->
+                <div class="timeline-dot"><h6><img src="./images/search.png"></h6></div>
+                <!-- TIMELINE CONTENT -->
+                <div class="card timeline-content">
+                    <div class="card-content">
+                        <!-- TIMELINE TITLE -->
+                        <h6 class="timeline-title">Google Mobile Sites Certification</h6>
+                        <!-- TIMELINE TITLE INFO -->
+                        <div class="timeline-info">
+                            <h6>
+                                <small>2017</small>
+                            </h6>
+                        </div>
+                        <!-- TIMELINE PARAGRAPH -->
+                        <p>
+                            Certification for creating, managing, measuring and optimising mobile websites.
+                        </p>
+                        <!-- BUTTON TRIGGER MODAL -->
+                        <!--<a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-2">-->
+                        <!--<i class="fa fa-ellipsis-h" aria-hidden="true"></i>-->
+                        <!--</a>-->
+                    </div>
+                </div>
+            </div>
+            <!-- SEVENTH TIMELINE -->
+            <div class="timeline-block">
+                <!-- DOT -->
+                <div class="timeline-dot"><h6><img src="./images/search.png"></h6></div>
+                <!-- TIMELINE CONTENT -->
+                <div class="card timeline-content">
+                    <div class="card-content">
+                        <!-- TIMELINE TITLE -->
+                        <h6 class="timeline-title">Google Analytics Certification</h6>
+                        <!-- TIMELINE TITLE INFO -->
+                        <div class="timeline-info">
+                            <h6>
+                                <small>2017</small>
+                            </h6>
+                        </div>
+                        <!-- TIMELINE PARAGRAPH -->
+                        <p>
+                            Certification in Google Analytics concepts such as:
+                            <ul>
+                                <li>
+                                    1) planning and principles
+                                </li>
+                                <li>
+                                    2) implementation and data collection
+                                </li>
+                                <li>
+                                    3) configuration and administration
+                                </li>
+                                <li>
+                                    4) conversion and attribution
+                                </li>
+                                <li>
+                                    5) reports, metrics and dimensions
+                                </li>
+                            </ul>
+                        </p>
+                        <!-- BUTTON TRIGGER MODAL -->
+                        <!--<a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-2">-->
+                        <!--<i class="fa fa-ellipsis-h" aria-hidden="true"></i>-->
+                        <!--</a>-->
+                    </div>
+                </div>
+            </div>
             <!--SIXTH TIMELINE-->
             <!--<div class="timeline-block">-->
             <!--&lt;!&ndash; DOT &ndash;&gt;-->
