--- a/about/index.html
+++ b/about/index.html
@@ -77,6 +77,7 @@
             <br>
 
             <!--OPTIONS-->
+            <a href="http://grizzlybit.info/"><i class="title-icon fa fa-goole"></i>Grizzlybit</a>
             <a href="#home"><i class="title-icon fa fa-user"></i>Home</a>
             <a href="#about"><i class="title-icon fa fa-dashboard"></i>About</a>
             <a href="#education"><i class="title-icon fa fa-graduation-cap"></i>Education</a>
@@ -88,7 +89,6 @@
             <!--<a href="#pricing-table"><i class="title-icon fa fa-money"></i>Pricing</a>-->
             <!--<a href="#blog"><i class="title-icon fa fa-pencil-square"></i>Blog</a>-->
             <a href="#contact"><i class="title-icon fa fa-envelope"></i>Contact</a>
-            <a href="http://grizzlybit.info/"><i class="title-icon fa fa-envelope"></i>Grizzlybit</a>
         </div>
 
         <!-- MENU BUTTON -->
