adding Shaheel's review

--- a/about/index.html
+++ b/about/index.html
@@ -1587,6 +1587,24 @@
                             </div>
 
 
+                            <div class="item">
+                                <div class="col-md-12">
+                                    <!--CLIENT IMAGE-->
+                                    <div class="ben center-block">
+                                        <img alt="client-image" class="center-block" src="images/Shaheel.jpg">
+                                    </div>
+                                    <!--CLIENT QUOTE-->
+                                    <blockquote>
+                                        I befriended Zubair when I was doing my masters at his graduation college. He was very enthusiastic 
+                                        and passionate on whichever tasks that he undertook. His good interpersonal skills helped him to 
+                                        easily get along well with others. With his qualities, I am sure that he would attain further greater 
+                                        heights in his career. I wish him all the best for his career and keep having a smiling face.
+                                        <cite>Shaheel Ali, Business Analyst, Civica</cite>
+                                    </blockquote>
+                                </div>
+                            </div>
+
+
 
                             <!--<div class="item">-->
                             <!--<div class="col-md-12">-->
