adding better images for ron

--- a/about/index.html
+++ b/about/index.html
@@ -1511,7 +1511,7 @@
                                 <div class="col-md-12">
                                     <!-- &lt;!&ndash;CLIENT IMAGE&ndash;&gt; -->
                                     <div class="ben center-block">
-                                        <img alt="client-image" class="center-block" src="images/rani.jpg">
+                                        <img alt="client-image" class="center-block" src="images/ron.jpg">
                                     </div>
                                     <!-- &lt;!&ndash;CLIENT QUOTE&ndash;&gt; -->
                                     <blockquote>
@@ -1523,7 +1523,7 @@
                                         customers. Whenever you see a happy customer, positive energy in the air, unparalleled
                                         creative work, or innovative solution, you know that Zubair has been there. I wish
                                         you all the best in your journey to deliver unprecedented solutions to the world.
-                                        <cite>Rani Hazeem, Project Manager &amp; Business Analyst, ROAMWORKS.</cite>
+                                        <cite>Ron Hazeem, Project Manager &amp; Business Analyst, ROAMWORKS.</cite>
                                     </blockquote>
                                 </div>
                             </div>
