adding new job post to the time line

--- a/about/index.html
+++ b/about/index.html
@@ -702,6 +702,42 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- FOURTH TIMELINE -->
+                <div class="timeline-block">
+                    <!-- DOT -->
+                    <div class="timeline-dot">
+                        <h6>CO</h6>
+                    </div>
+                    <!-- TIMELINE CONTENT -->
+                    <div class="card timeline-content">
+                        <div class="card-content">
+                            <!-- TIMELINE TITLE -->
+                            <h6 class="timeline-title">Chief Technology Officer</h6>
+                            <!-- TIMELINE TITLE INFO -->
+                            <div class="timeline-info">
+                                <h6>
+                                    <small>
+                                        <a href="https://razrlab.com/">RAZRLAB DMCC</a>
+                                    </small>
+                                </h6>
+                                <h6>
+                                    <small>April 2017 - Continue..</small>
+                                </h6>
+                            </div>
+                            <!-- TIMELINE PARAGRAPH -->
+                            <p>
+                                Research and develop cutting-edge solutions. In charge of all company technology and technological resources. 
+                                Involved in the establishment of company technology vision, strategies, and growth plans. Supervise systems 
+                                and quality assurance processes of the company.
+                            </p>
+                            <!-- BUTTON TRIGGER MODAL -->
+                            <!--<a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-5">-->
+                            <!--<i class="fa fa-ellipsis-h" aria-hidden="true"></i>-->
+                            <!--</a>-->
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -1503,7 +1539,6 @@
                             <li data-target="#myCarousel" data-slide-to="1"></li>
                             <li data-target="#myCarousel" data-slide-to="2"></li>
                             <li data-target="#myCarousel" data-slide-to="3"></li>
-                            <li data-target="#myCarousel" data-slide-to="4"></li>
                         </ol>
                         <!-- WRAPPER FOR SLIDES -->
                         <div class="carousel-inner" role="listbox">
@@ -1596,10 +1631,11 @@
                                     </div>
                                     <!--CLIENT QUOTE-->
                                     <blockquote>
-                                        I befriended Zubair when I was doing my masters at his graduation college. He was very enthusiastic 
-                                        and passionate on whichever tasks that he undertook. His good interpersonal skills helped him to 
-                                        easily get along well with others. With his qualities, I am sure that he would attain further greater 
-                                        heights in his career. I wish him all the best for his career and keep having a smiling face.
+                                        I befriended Zubair when I was doing my masters at his graduation college. He was very enthusiastic and passionate on whichever
+                                        tasks that he undertook. His good interpersonal skills helped him to easily get along
+                                        well with others. With his qualities, I am sure that he would attain further greater
+                                        heights in his career. I wish him all the best for his career and keep having a smiling
+                                        face.
                                         <cite>Shaheel Ali, Business Analyst, Civica</cite>
                                     </blockquote>
                                 </div>
