adding end date for previous job post

--- a/about/index.html
+++ b/about/index.html
@@ -688,7 +688,7 @@
                                     </small>
                                 </h6>
                                 <h6>
-                                    <small>November 2014 - Continue..</small>
+                                    <small>November 2014 - April 2017</small>
                                 </h6>
                             </div>
                             <!-- TIMELINE PARAGRAPH -->
