committing new jd for old job post

--- a/about/index.html
+++ b/about/index.html
@@ -652,7 +652,8 @@
                             <!-- TIMELINE TITLE INFO -->
                             <div class="timeline-info">
                                 <h6>
-                                    <small>Cataliq Laboratories</small>
+                                    <small>
+                                        <a href="http://www.caasplabs.com/" _target="blank"></a>CAASP Labs Pvt. Ltd</small>
                                 </h6>
                                 <h6>
                                     <small>July 2014 - November 2014</small>
@@ -660,9 +661,13 @@
                             </div>
                             <!-- TIMELINE PARAGRAPH -->
                             <p>
-                                Worked on front-end development for ERP solutions using trending frameworks. My work dealt with directly communicating with
-                                the clients, whilst coordinating and developing a polished solution as a part of the development
-                                team.
+                                <ul>
+                                    <li>• Worked on front-end development for ERP solutions.</li>
+                                    <li>• Dealt with directly communicating with the clients offering customized solutions</li>
+                                    <li>• Coordinated and developed polished solutions as a senior member of the development
+                                        teamm
+                                    </li>
+                                </ul>
                             </p>
 
                         </div>
@@ -693,12 +698,27 @@
                             </div>
                             <!-- TIMELINE PARAGRAPH -->
                             <p>
-                                Currently working on various development aspects. My work most of the time deals with the entire stack..
+                                <ul>
+                                    <li>•
+                                        <b> Research, design and develop sacable M2M/IoT applications for extraction and analysis
+                                            of real world data revolving around customer's business needs </b>
+                                    </li>
+                                    <li>• Contributed software engineering expertise in the development of products through the
+                                        software lifecycle, from requirements engineering to successful deployment of an
+                                        application
+                                    </li>
+                                    <li>• Work as a sole full-stack engineer in the company providing back-end enhancements to
+                                        aesthetically advanced front-end development</li>
+                                    <li> • Took the helm of a lead front-end engineer for the company, managing a team of off-shore
+                                        developers
+                                    </li>
+                                    <li> • Provided deployments with pro-active second level support whenever needed</li>
+                                </ul>
                             </p>
                             <!-- BUTTON TRIGGER MODAL -->
-                            <!--<a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-5">-->
-                            <!--<i class="fa fa-ellipsis-h" aria-hidden="true"></i>-->
-                            <!--</a>-->
+                            <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-5">
+                                More
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -727,8 +747,8 @@
                             </div>
                             <!-- TIMELINE PARAGRAPH -->
                             <p>
-                                Research and develop cutting-edge solutions. In charge of all company technology and technological resources. 
-                                Involved in the establishment of company technology vision, strategies, and growth plans. Supervise systems 
+                                Research and develop cutting-edge solutions. In charge of all company technology and technological resources. Involved in
+                                the establishment of company technology vision, strategies, and growth plans. Supervise systems
                                 and quality assurance processes of the company.
                             </p>
                             <!-- BUTTON TRIGGER MODAL -->
@@ -1228,19 +1248,56 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title" id="myModalLabel-5">EXPERIENCE AT M</h4>
+                    <h4 class="modal-title" id="myModalLabel-5">Software Engineer at ROAMWORKS FZ-LLC</h4>
                     <h6>
-                        <small>Jan 2014 - Mar 2015</small>
+                        <small>November 2014 - April 2017</small>
                     </h6>
                 </div>
                 <!--MODAL BODY-->
                 <div class="modal-body">
                     <p>
-                        I have learned a great many things from participating in varsity football. It has changed my entire outlook on and attitude
-                        toward life. Before my freshman year at [high-school], I was shy, had low self-esteem and turned
-                        away from seemingly impossible challenges. Football has altered all of these qualities. On the first
-                        day of freshman practice, the team warmed up with a game of touch football. The players were split
-                        up and the game began. However,
+                        <b>Key Roles:</b>
+                        <ul>
+                            <li>•
+                                <b> Research, design and develop sacable M2M/IoT applications for extraction and analysis of
+                                    real world data revolving around customer's business needs </b>
+                            </li>
+                            <li>• Contributed software engineering expertise in the development of products through the software
+                                lifecycle, from requirements engineering to successful deployment of an application
+                            </li>
+                            <li>• Work as a sole full-stack engineer in the company providing back-end enhancements to aesthetically
+                                advanced front-end development</li>
+                            <li> • Took the helm of a lead front-end engineer for the company, managing a team of off-shore developers
+                            </li>
+                            <li> • Provided deployments with pro-active second level support whenever needed</li>
+                        </ul>
+                        <hr>
+                        <b>Key Contributions:</b>
+                        <ul>
+                            <li>
+                                • Developed and deployed tank level monitoring solution for
+                                <a href="http://www.npa.gov.gh/"
+                                    target="_blank">National Petroleum Authority of Ghana (NPA)</a> with a unique mechanism for generating work
+                                orders which automated and streamlined their operations
+                            </li>
+                            <li>• Developed strategic proof of concept for the company with a tank level monitoring solution
+                                for
+                                <a href="https://www.trafigura.com/" target="_blank">Trafigura</a>, which is a global leader in the Oil and Gas Industry
+                            </li>
+                            <li>• Involved in the development of wide scale fleet management solution for the
+                                <a href="http://www.dewa.gov.ae/en"
+                                    target="_blank">Water and Electricity Authority of Dubai (DEWA)</a>,
+                                <a href="http://www.transafe.ae/"
+                                    target="_blank">Transafe</a>,
+                                <a href="http://www.allied-transport.com/" target="_blank">Allied Transports</a>,
+                                <a href="http://www.allied-transport.com/" target="_blank">Allied Planning</a> and  <a href="http://www.action-is.com/" target="_blank">Action International</a>.</li>
+                            <li>• Built the first mobile application to compliment the fleet management solution deployed for
+                                the <a href="http://www.dewa.gov.ae/en" target="_blank">Water and Electricity Authority of Dubai (DEWA)</a>, giving the management operational overview
+                                and insightful analytics on the fly of the "Track and Trace" solution</li>
+                            <li>• Involved in the development and roll out of heavy equipment monitoring solution for <a href="https://www.linkedin.com/company/engineers-office/" target="_blank">Engineer's
+                                Office</a>, <a href="http://www.action-is.com/" target="_blank">Action International</a> and <a href="http://www.qer.ae/" target="_blank">QER</a></li>
+                        </ul>
+
                     </p>
                 </div>
                 <!--MODAL FOOTER-->
