fixing a broken link

--- a/about/index.html
+++ b/about/index.html
@@ -653,7 +653,7 @@
                             <div class="timeline-info">
                                 <h6>
                                     <small>
-                                        <a href="http://www.caasplabs.com/" _target="blank"></a>CAASP Labs Pvt. Ltd</small>
+                                        <a href="http://www.caasplabs.com/" _target="blank">CAASP Labs Pvt. Ltd</a></small>
                                 </h6>
                                 <h6>
                                     <small>July 2014 - November 2014</small>
