--- a/about/index.html
+++ b/about/index.html
@@ -1865,10 +1865,9 @@
 
                 <div class="col-md-7 col-sm-12 col-xs-12">
                     <!-- CONTACT MAP -->
-                    <div id="map-card" class="card">
-                        <!-- MAP -->
+                    <!-- <div id="map-card" class="card">
                         <div id="myMap"></div>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
